--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "atlantis-backend": "file:",
         "body-parser": "^1.20.3",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.21.1",
         "mysql": "^2.18.1",
@@ -17,6 +18,7 @@
         "sequelize": "^6.37.4"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/node": "^22.7.8",
         "ts-node-dev": "^1.1.8",
